--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=account-subscription-api
+spring.datasource.url=jdbc:postgresql://localhost:5432/account_subscription_api
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+logging.config=classpath:logback-spring.xml
