--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+    implementation 'ch.qos.logback:logback-classic:1.5.17-alpha10'  // Или другая актуальная версия
+    implementation 'ch.qos.logback:logback-core:1.5.17-alpha10' // Обновите, если нужно
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
