--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,1 +1,42 @@
+version: '3.8'
+
 services:
+  account-subscription-service:
+    image: by/mrfakek/account-subscription-api
+    build:
+      context: .
+    restart: always
+    container_name: account-subscription-api
+    ports:
+      - '8080:8080'
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/account_subscription_api
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: root
+      SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+    depends_on:
+      - db
+    networks:
+      - app-network
+
+  db:
+    image: postgres:17
+    restart: on-failure
+    container_name: postgres-db
+    ports:
+      - '5433:5432'
+    environment:
+      POSTGRES_DB: account_subscription_api
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: root
+    healthcheck:
+        test: [ "CMD-SHELL", "pg_isready -U postgres -d account_subscription_api" ]
+        interval: 10s
+        timeout: 5s
+        retries: 5
+    networks:
+         - app-network
+networks:
+  app-network:
+    driver: bridge
