--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
-    implementation 'ch.qos.logback:logback-classic:1.5.17-alpha10'  // Или другая актуальная версия
-    implementation 'ch.qos.logback:logback-core:1.5.17-alpha10' // Обновите, если нужно
+    implementation 'ch.qos.logback:logback-classic:1.5.17-alpha10'
+    implementation 'ch.qos.logback:logback-core:1.5.17-alpha10'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
